# cpp_sem1

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
assets/: script.lua  styles.css  test.css  test.lua  test.luax.html  ui.luax
lib/graph_lib/: CMakeLists.txt  GUI.cpp  GUI.h  Graph.cpp  Graph.h  Point.h  Window.cpp  Window.h
lib/graph_lib/ext/: graph.cpp  graph.h
lib/gui_engine/: CMakeLists.txt  browser_window.cpp  browser_window.hpp  css_parser.cpp  css_parser.hpp  css_types.hpp  dom_types.hpp  event_engine.cpp  event_engine.hpp  fltk_renderer.cpp  fltk_renderer.hpp  html_widget.cpp  html_widget.hpp  layout_engine.cpp  layout_engine.hpp  layout_types.hpp  preprocessor.cpp  preprocessor.hpp  style_engine.cpp  style_engine.hpp  xml_parser.cpp  xml_parser.hpp  xml_parser.ixx
src/: Board.hpp  Figure.hpp  Move.hpp  Players.hpp  PossibleMovesGenerator.hpp  Vector2.hpp  chess.cpp  test.cpp  utility.hpp
src/Boards/: BoardState.hpp  ClassicBoard.hpp  IBoard.hpp
src/Figures/: Bishop.hpp  IFigure.hpp  King.hpp  Knight.hpp  Pawn.hpp  Queen.hpp  Rook.hpp
src/GameCores/: ClassicChessCore.hpp  IGameCore.hpp
src/Players/: HumanPlayer.hpp
src/backend/: CMakeLists.txt  DataFabric.hpp  Figure.hpp  Move.hpp  PossibleMovesGenerator.hpp  Vector2.hpp  utility.hpp
src/backend/Boards/: BoardState.hpp  ClassicBoard.hpp  IBoard.hpp
src/backend/Figures/: Bishop.hpp  IFigure.hpp  King.hpp  Knight.hpp  Pawn.hpp  Queen.hpp  Rook.hpp
src/backend/GameCores/: ClassicChessCore.cpp  ClassicChessCore.hpp  IGameCore.hpp
src/backend/Players/: GUIPlayer.hpp  HumanPlayer.hpp  IPlayer.hpp
src/backend/Validators/: ClassicChessValidations.hpp  Validator.hpp  ValidatorIO.hpp
src/frontend/: CMakeLists.txt  FltkFrontend.hpp  PlayerWidget.cpp  PlayerWidget.h  board_widget.cpp  board_widget.hpp  cell_widget.cpp  cell_widget.hpp  frontend.h  gui.cpp  gui.hpp  main_window.cpp  main_window.hpp
tests/: CMakeLists.txt  a.txt  test_figures.cpp  test_pgn_parser.cpp
